[package]
name = "region_buffer"
version = "0.1.0"
authors = ["Aaron Power <theaaronepower@gmail.com>"]
edition = "2018"
categories = ["data-structures"]
keywords = ["region", "buffer", "shared", "mutable", "reference"]
license = "MIT/Apache-2.0"

[badges]
[badges.appveyor]
repository = "Aaronepower/region_buffer"

[badges.travis-ci]
repository = "Aaronepower/region_buffer"


[dependencies]
